feat: aggiunta possibilità di modificare nome, cognome e username
- Introdotta la modifica del profilo utente (nome, cognome, username)
- Fix bug sul refresh token
- Modificato endpoint cambio password da POST /api/auth/change_password a PATCH /api/users/me
